<resources>
    <string name="app_name">TODO List App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="create_note_fragment">Create Note fragment</string>
    <string name="edit_note_fragment">Edit Note Fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="select_date">Select Date</string>
</resources>