<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010"
    tools:context=".ui.fragments.CreateNoteFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/TaskTitleCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="7dp">

                <EditText
                    android:id="@+id/TaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#202020"
                    android:ems="10"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#5C5C5C"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/TaskDateCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="7dp">

                <EditText
                    android:id="@+id/TaskDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#202020"
                    android:drawableEnd="@drawable/baseline_calendar_month_24"
                    android:ems="10"
                    android:hint="@string/select_date"
                    android:inputType="date"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#5C5C5C"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/TaskDescriptionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="7dp">

                <EditText
                    android:id="@+id/TaskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="#202020"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="15"
                    android:padding="15dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#5C5C5C"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/TaskPriorityCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#101010"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/HighPriority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/onselect_button_background"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/high"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/MediumPriority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:layout_weight="1"
                        android:background="@drawable/onselect_button_background"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/medium"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/LowPriority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/onselect_button_background"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/low"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/baseline_done_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>